examples/oso/minikube/deployment2.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: webbox-2-deployment
    labels:
      app: webbox2
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: webbox2
    template:
      metadata:
        labels:
          app: webbox2
      spec:
        containers:
          - name: webbox2
            image: eduardopax/webbox:v3
            ports:
              - containerPort: 80
