examples/oso/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webbox
spec:
  selector:
    app: webbox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
