examples/oso/minikube/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webbox2
spec:
  selector:
    app: webbox2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
